# splice

./: .env.example  README.md  arch.tldr  docker-compose.yml  pyproject.toml
splice/: app.py  settings.py
splice/alembic/: env.py
splice/alembic/versions/: c0491bbde3cb_create_table_users.py
splice/api/routers/: user_router.py  ws_router.py
splice/api/schemas/: user_schema.py
splice/api/service/: user_service.py
splice/core/entities/: user.py
splice/core/interfaces/: user_repository_interface.py
splice/core/use_cases/user/: atualizar_usuario.py  buscar_usuario.py  create_user.py  criar_usuario.py  deletar_usuario.py  delete_user.py  get_user.py  update_user.py
splice/infra/database/: __init__.py  base.py
splice/infra/repositories/: user_repository.py  user_repository_impl.py
splice/interface/routers/: user_router.py  ws_router.py
splice/interface/schemas/: user_schema.py
splice/interface/service/: user_service.py
tests/: conftest.py  test_app.py  test_db.py
