[tool.poetry]
name = "splice"
version = "0.1.0"
description = ""
authors = ["Paulo Mendonça <paulo.mendonca@visie.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.0"}
alembic = "^1.13.3"
pydantic-settings = "^2.6.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
websockets = "^13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.6.9"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_mode = 'auto'


[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev splice/app.py'
pre_test = 'task format'
test = 'pytest -s -x --cov=splice -vv'
post_test = 'coverage html'

alembic_upgrade = 'cd splice; alembic upgrade head'
alembic_downgrade = 'cd splice; alembic downgrade base'
alembic_down_up = 'cd splice; alembic downgrade base; alembic upgrade head'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
